examples/test/testpolicy16727.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16727
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key18: value14
      key22: value3
      key2: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value36
          key31: value20
      podSelector:
        matchLabels:
          key1: value41
